tests/ui/parser/incompatible-safe-unsafe-keywords-extern-block-2.stderr
error: expected one of `extern` or `fn`, found `safe`
  --> $DIR/incompatible-safe-unsafe-keywords-extern-block-2.rs:12:8
   |
LL | unsafe safe extern {}
   |        ^^^^ expected one of `extern` or `fn`
   |
help: `unsafe` and `safe` are incompatible, use only one of the keywords
  --> $DIR/incompatible-safe-unsafe-keywords-extern-block-2.rs:12:1
   |
LL | unsafe safe extern {}
   | ^^^^^^^^^^^

error: aborting due to 1 previous error

